--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "baseMapAPI",
+  "name": "base-map-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
