--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
     "eslint": "^9.30.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "eslint-plugin-prettier": "^5.5.4",
     "jest": "^30.0.4",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
