--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "@fastify/rate-limit": "^10.3.0",
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "^5.2.3",
+    "@sinclair/typebox": "^0.34.45",
     "@supabase/supabase-js": "^2.50.3",
     "dotenv": "^17.0.1",
     "fastify": "^5.4.0",
     "pino": "^9.7.0",
-    "pino-pretty": "^13.0.0",
-    "zod": "^3.25.71"
+    "pino-pretty": "^13.0.0"
   },
   "devDependencies": {
     "@types/node": "^24.0.10",
@@ -32,8 +32,8 @@
     "@typescript-eslint/parser": "^8.35.1",
     "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-unused-imports": "^4.1.4",
     "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "jest": "^30.0.4",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
