--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fastify/rate-limit": "^10.3.0",
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "^5.2.3",
+    "@sentry/node": "^10.34.0",
     "@sinclair/typebox": "^0.34.45",
     "@supabase/supabase-js": "^2.50.3",
     "dotenv": "^17.0.1",
